<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:layout_weight="0.5">

		<ListView
			android:layout_height="match_parent"
			android:layout_width="wrap_content"
			android:id="@+id/dialogrectagList"/>

	</LinearLayout>

	<TextView
		android:layout_height="wrap_content"
		android:text=""
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:id="@+id/dialogsaverecTextView999"
		android:textColor="@color/navy"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<Button
			android:layout_height="wrap_content"
			android:text="@string/create"
			android:layout_width="match_parent"
			android:layout_weight="0.25"/>

		<Button
			android:layout_height="wrap_content"
			android:text="@string/select"
			android:layout_width="match_parent"
			android:layout_weight="0.25"/>

		<Button
			android:layout_height="wrap_content"
			android:text="@string/delete"
			android:layout_width="match_parent"
			android:layout_weight="0.25"/>
		
		<Button
			android:layout_height="wrap_content"
			android:text="@string/close"
			android:layout_width="match_parent"
			android:layout_weight="0.25"/>
		
	</LinearLayout>

</LinearLayout>

