<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/dialog_save_audio_name"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:textColor="@color/sky_blue"/>

	</LinearLayout>

	<EditText
		android:layout_height="wrap_content"
		android:ems="10"
		android:layout_width="wrap_content"
		android:id="@+id/dialogsaverecAudioFileName"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/dialog_save_text_name"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:textColor="@color/sky_blue"/>

		<TextView
			android:layout_height="wrap_content"
			android:text="Medium Text"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:id="@+id/dialogsaverecTextFileName"
			android:textColor="@color/navy"/>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/dialog_save_date"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:textColor="@color/sky_blue"/>

		<TextView
			android:layout_height="wrap_content"
			android:text="Medium Text"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:id="@+id/dialogsaverecDate"
			android:textColor="@color/navy"/>

	</LinearLayout>

	
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/dialog_save_duration"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:textColor="@color/sky_blue"/>

		<TextView
			android:layout_height="wrap_content"
			android:text="Medium Text"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:id="@+id/dialogsaverecDuration"
			android:textColor="@color/navy"/>

	</LinearLayout>
	
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/dialog_save_tags"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:textColor="@color/sky_blue"/>

		<TextView
			android:layout_height="wrap_content"
			android:text="Medium Text"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:id="@+id/dialogsaverecTextViewTags"
			android:textColor="@color/navy"/>

	</LinearLayout>
	
	<TextView
		android:layout_height="wrap_content"
		android:text=""
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:id="@+id/dialogsaverecTextView999"
		android:textColor="@color/navy"/>
	
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<Button
			android:layout_height="wrap_content"
			android:text="@string/cancel"
			android:layout_width="match_parent"
			android:layout_weight="0.33"/>
		<Button
			android:layout_height="wrap_content"
			android:text="@string/yes"
			android:layout_width="match_parent"
			android:layout_weight="0.33"/>
		<Button
			android:layout_height="wrap_content"
			android:text="@string/no"
			android:layout_width="match_parent"
			android:layout_weight="0.33"/>
		
	</LinearLayout>

</LinearLayout>

